--- a/index.html
+++ b/index.html
@@ -5,8 +5,47 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>html-css-zoom</title>
+        <link rel="stylesheet" href="./assets/style.css">
+        <!-- icons link down here -->
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+            integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
+        <header class="app-header d-flex">
+            <div class="speaker-view"><i class="fa-solid fa-grip"></i><span>Speaker
+                    View</span></div>
+            <i class="fa-solid fa-maximize"></i>
+        </header>
+
+        <main class="d-flex">
+            <div class="user ">
+                <img src="https://picsum.photos/300/200" alt="">
+                <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                    <span>Pincopallo</span></div>
+            </div>
+            <!-- ----------------------------------- single user thumb -->
+            <div class="user">
+                <img src="https://picsum.photos/300/200" alt="">
+                <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                    <span>Pincopallo</span></div>
+            </div>
+            <!-- ----------------------------------- single user thumb -->
+            <div class="user">
+                <img src="https://picsum.photos/300/200" alt="">
+                <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                    <span>Pincopallo</span></div>
+            </div>
+            <!-- ----------------------------------- single user thumb -->
+            <div class="user">
+                <img src="https://picsum.photos/300/200" alt="">
+                <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                    <span>Pincopallo</span></div>
+            </div>
+            <!-- ----------------------------------- single user thumb -->
+        </main>
+        <footer></footer>
 
 
 
