--- a/index.html
+++ b/index.html
@@ -19,31 +19,263 @@
             <i class="fa-solid fa-maximize"></i>
         </header>
 
-        <main class="d-flex">
-            <div class="user ">
-                <img src="https://picsum.photos/300/200" alt="">
-                <div class="speaker"><i class="fa-solid fa-microphone"></i>
-                    <span>Pincopallo</span></div>
+        <main class="">
+            <div class="all-thumbs d-flex">
+                <div class="user ">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user ">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb --><div
+                    class="user ">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb --><div
+                    class="user ">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb --><div
+                    class="user ">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb --><div
+                    class="user ">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
+                <div class="user">
+                    <img src="https://picsum.photos/300/200" alt="">
+                    <div class="speaker"><i class="fa-solid fa-microphone"></i>
+                        <span>Pincopallo</span></div>
+                </div>
+                <!-- ----------------------------------- single user thumb -->
             </div>
-            <!-- ----------------------------------- single user thumb -->
-            <div class="user">
-                <img src="https://picsum.photos/300/200" alt="">
-                <div class="speaker"><i class="fa-solid fa-microphone"></i>
-                    <span>Pincopallo</span></div>
-            </div>
-            <!-- ----------------------------------- single user thumb -->
-            <div class="user">
-                <img src="https://picsum.photos/300/200" alt="">
-                <div class="speaker"><i class="fa-solid fa-microphone"></i>
-                    <span>Pincopallo</span></div>
-            </div>
-            <!-- ----------------------------------- single user thumb -->
-            <div class="user">
-                <img src="https://picsum.photos/300/200" alt="">
-                <div class="speaker"><i class="fa-solid fa-microphone"></i>
-                    <span>Pincopallo</span></div>
-            </div>
-            <!-- ----------------------------------- single user thumb -->
+
+
         </main>
         <footer></footer>
 
