add footer need to fix Vh

--- a/index.html
+++ b/index.html
@@ -277,7 +277,12 @@
 
 
         </main>
-        <footer></footer>
+        <footer>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis quae doloremque alias vero omnis qui reiciendis esse
+            aliquid aperiam rerum. Ad reprehenderit enim culpa praesentium
+            quidem, tempora nesciunt molestias id.
+        </footer>
 
 
 
