need to fix footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <i class="fa-solid fa-maximize"></i>
         </header>
 
-        <main class="">
+        <main class="container">
             <div class="all-thumbs d-flex">
                 <div class="user ">
                     <img src="https://picsum.photos/300/200" alt="">
@@ -277,14 +277,43 @@
 
 
         </main>
-        <footer>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Perspiciatis quae doloremque alias vero omnis qui reiciendis esse
-            aliquid aperiam rerum. Ad reprehenderit enim culpa praesentium
-            quidem, tempora nesciunt molestias id.
-        </footer>
+        <footer class="d-flex">
+            <div class="left-icons-footer d-flex ">
+                <div class="icon-footer-mute d-flex">
+                    <i class="fa-solid fa-microphone"></i>
+                    <p>Mute</p>
+
+                </div>
+                <i class="fa-solid fa-angle-up"></i>
+
+                <div class="icon-footer-mute d-flex">
+                    <i class="fa-solid fa-camera"></i>
+                    <p>stop video</p>
+
+                </div>
+                <i class="fa-solid fa-angle-up"></i>
+                <!-- ------------------------------------------------------------lefticons -->
+                <div class="center-icons-footer d-flex ">
+                    <div class="icon-footer-mute d-flex">
+                        <i class="fa-solid fa-microphone"></i>
+                        <p>Mute</p>
+
+                    </div>
+                    <i class="fa-solid fa-angle-up"></i>
+
+                    <div class="icon-footer-mute d-flex">
+                        <i class="fa-solid fa-camera"></i>
+                        <p>stop video</p>
+
+                    </div>
+                    <i class="fa-solid fa-angle-up"></i>
+
+
+                </div>
+
+            </footer>
 
 
 
-    </body>
-</html>
+        </body>
+    </html>
