--- a/index.html
+++ b/index.html
@@ -277,43 +277,83 @@
 
 
         </main>
+
         <footer class="d-flex">
-            <div class="left-icons-footer d-flex ">
-                <div class="icon-footer-mute d-flex">
+            <div class="left icons-footer d-flex ">
+                <div class="icon-footer-pad d-flex">
                     <i class="fa-solid fa-microphone"></i>
                     <p>Mute</p>
 
                 </div>
                 <i class="fa-solid fa-angle-up"></i>
 
-                <div class="icon-footer-mute d-flex">
+                <div class="icon-footer-pad d-flex">
                     <i class="fa-solid fa-camera"></i>
-                    <p>stop video</p>
+                    <p>Stop video</p>
 
                 </div>
                 <i class="fa-solid fa-angle-up"></i>
-                <!-- ------------------------------------------------------------lefticons -->
-                <div class="center-icons-footer d-flex ">
-                    <div class="icon-footer-mute d-flex">
-                        <i class="fa-solid fa-microphone"></i>
-                        <p>Mute</p>
 
-                    </div>
-                    <i class="fa-solid fa-angle-up"></i>
-
-                    <div class="icon-footer-mute d-flex">
-                        <i class="fa-solid fa-camera"></i>
-                        <p>stop video</p>
-
-                    </div>
-                    <i class="fa-solid fa-angle-up"></i>
-
+            </div>
+            <!-- left icons footer -->
+            <div class="center icons-footer d-flex ">
+                <div class="icon-footer-pad d-flex">
+                    <i class="fa-solid fa-user-plus"></i>
+                    <p>Mute</p>
 
                 </div>
 
-            </footer>
+
+                <div class="icon-footer-pad d-flex">
+                    <i class="fa-solid fa-user-group"></i>
+                    <p>Manage participants</p>
+
+                </div>
+
+
+                <div class="icon-footer-pad d-flex">
+                    <i class="fa-solid fa-chart-simple"></i>
+                    <p>Polling</p>
+
+                </div>
+
+
+                <div class="icon-footer-pad d-flex ">
+                    <i id="share" class="fa-solid fa-share-from-square"></i>
+                    <p>Share Screen</p>
+
+                </div>
+                <i class="fa-solid fa-angle-up"></i>
+
+                <div class="icon-footer-pad d-flex ">
+                    <i class="fa-solid fa-comments"></i>
+                    <p>chat</p>
+                </div>
+                <div class="icon-footer-pad d-flex ">
+                    <i class="fa-solid fa-record-vinyl"></i>
+                    <p>Record</p>
+                </div>
+                <div class="icon-footer-pad d-flex ">
+                    <i class="fa-brands fa-windows"></i>
+                    <p>Breakout Rooms</p>
+                </div>
+                <div class="icon-footer-pad d-flex ">
+                    <i class="fa-solid fa-ellipsis"></i>
+                    <p>More</p>
+                </div>
+
+
+            </div>
+            <!-- center icon footer -->
+            <div class="right icons-footer d-flex ">
+                <p>End Meeting</p>
+            </div>
+            <!-- right icon footer -->
+
+
+        </footer>
 
 
 
-        </body>
-    </html>
+    </body>
+</html>
